labdell/ingress_lixo/ingress/ingress-nginx-controller-service-admission.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-nginx
    meta.helm.sh/release-namespace: ingress
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 1.0.1
    helm.sh/chart: ingress-nginx-4.0.2
  name: ingress-nginx-controller-admission
  namespace: ingress
  resourceVersion: "625761"
  uid: 07155924-9184-489f-afdc-74b4151b96f6
spec:
  clusterIP: 10.102.69.12
  clusterIPs:
  - 10.102.69.12
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    protocol: TCP
    targetPort: webhook
  selector:
    app: nginx-ingress-lb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
