labdell/ingress_lixo/ingress/ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress
spec:
  clusterIP: 10.99.64.190
  clusterIPs:
  - 10.99.64.190
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    nodePort: 30942
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 31837
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: nginx-ingress-lb
  sessionAffinity: None
  type: LoadBalancer
