labdell/ingress_lixo/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: dell-k8s.com
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress
            port:
              number: 18080
        path: /nginx_status
        pathType: Prefix
