labdell/ingress_lixo/ingress/rota_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dell-k8s.com
spec:
  rules:
  - http:
      paths:
      - path: /app1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: appsvc1
            port:
              number: 80
      - path: /app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: appsvc2
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: appscv1
            port:
              number: 80
